# CTranslate2

./: meson.build  meson.options
